syntax = "proto3";

package kafkaMessages;

option go_package = "./;kafkaMessages";
